@@ -1,8 +1,28 @@
 #
-# set the qth field
+# set the name of the user
+#
+# Copyright (c) 1998 - Dirk Koopman
 #
 # $Id$
 #
-my ($self, $args)  = @_;
-my $user = $self->user;
-return (1, "qth is now ", $user->qth($args));
+
+my ($self, $line) = @_;
+my $call = $self->call;
+my $user;
+
+# remove leading and trailing spaces
+$line =~ s/^\s+//;
+$line =~ s/\s+$//;
+
+return (1, $self->msg('qthe1')) if !$line;
+
+$user = DXUser->get_current($call);
+if ($user) {
+	$user->qth($line);
+	$user->put();
+	DXProt::broadcast_ak1a(DXProt::pc41($call, 2, $line), $DXProt::me);
+	return (1, $self->msg('qth', $line));
+} else {
+	return (1, $self->msg('namee2', $call));
+}
+
