@@ -14,6 +14,8 @@ package DXM;
                 already => '$_[0] already connnected',
 				anns => 'Announce flag set on $_[0]',
 				annu => 'Announce flag unset on $_[0]',
+				bbse1 => 'Please try again, set/bbs <your bbs address>',
+				bbs => 'Your BBS Address is now \"$_[0]\"',
 				beepoff => 'Beeps are now off',
 				beepon => 'Beeps are now on',
 				conother => 'Sorry $_[0] you are connected on another port',
@@ -37,6 +39,8 @@ package DXM;
 				e8 => 'Need a callsign and some text',
 				e9 => 'Need at least some text',
 				e10 => '$_[0] not connected locally',
+				emaile1 => 'Please try again, set/email <your e-mail address>',
+				emaila => 'Your E-Mail Address is now \"$_[0]\"',
 				email => 'E-mail address set to: $_[0]',
 				helpe1 => 'Help system unavailable, tell sysop',
 				helpe2 => 'No help available on $_[0]',
@@ -45,9 +49,17 @@ package DXM;
 				hereu => 'Here unset on $_[0]',
 				homebbs => 'Home BBS set to: $_[0]',
 				homenode => 'Home Node set to: $_[0]',
+				hnodee1 => 'Please try again, set/homenode <your home DX Cluster>',
+				hnode => 'Your Homenode is now \"$_[0]\"',
 				l1 => 'Sorry $_[0], you are already logged on on another channel',
 				l2 => 'Hello $_[0], this is $main::mycall in $main::myqth running DXSpider V$main::version',
+				loce1 => 'Please try again, set/location <latitude longitude>',
+				loce2 => 'Don\'t recognise \"$_[0]\" as a Lat/Long (eg 52 20 N 0 16 E)',
+				loc => 'Your Lat/Long is now \"$_[0]\"',
 				m2 => '$_[0] Information: $_[1]',
+				namee1 => 'Please try again, set/name <your name>',
+				namee2 => 'Can\'t find user $_[0]!',
+				name => 'Your name is now \"$_[0]\"',
 				node => '$_[0] set as AK1A style Node',
 				nodec => '$_[0] created as AK1A style Node',
 				nodee1 => 'You cannot use this command whilst your target ($_[0]) is on-line',
@@ -59,6 +71,11 @@ package DXM;
 				pr => '$_[0] de $main::mycall $main::cldate $main::ztime >',
 				priv => 'Privilege level changed on $_[0]',
 				prx => '$main::mycall >',
+				qthe1 => 'Please try again, set/qth <your qth>',
+				qth => 'Your QTH is now \"$_[0]\"',
+				qrae1 => 'Please try again, set/qra <qra locator>',
+				qrae2 => 'Don\'t recognise \"$_[0]\" as a QRA locator (eg JO02LQ)',
+				qra => 'Your QRA Locator is now \"$_[0]\"',
 				rcmdo => 'RCMD \"$_[0]\" sent to $_[1]',
 				read1 => 'Sorry, no new messages for you',
 				read2 => 'Msg $_[0] not found',
