@@ -1,3 +1,8 @@
+07Dec98========================================================================
+1. Added set/name, set/qra, set/location, set/qth, set/homenode
+2. changed the Msg socket close to a shutdown (hopefully more reliable), this 
+should stop clients hanging on exit.
+3. Added Alias support for help
 06Dec98========================================================================
 1. Fixed DXBearing::is_qra so that it correctly detects full QRA locators
 2. Added sh/qra for doing locator distances and bearings
